--- a/src/_typography.scss
+++ b/src/_typography.scss
@@ -6,7 +6,7 @@
 body {
   font-size: 14px;
   line-height: 24px;
-  font-family: karla;
+  font-family: 'Karla', sans-serif;
   color: $orange;
 }
 
