--- a/src/_selects.scss
+++ b/src/_selects.scss
@@ -11,6 +11,7 @@
   background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8' standalone='no'%3F%3E%3Csvg width='10px' height='6px' viewBox='0 0 10 6' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Cdefs%3E%3C/defs%3E%3Cg id='Page-1' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd'%3E%3Cpolyline id='Path-2' stroke='%23FF3A00' stroke-width='1.5' points='9 1 5 5 1 1'%3E%3C/polyline%3E%3C/g%3E%3C/svg%3E");
   background-repeat: no-repeat;
   background-position: center right 1.5*$u;
+  cursor: pointer;
   
   &:focus {
     outline: 0;
