--- a/src/index.css
+++ b/src/index.css
@@ -259,7 +259,6 @@ a {
   flex: auto; }
 
 input, textarea {
-  font-family: inherit;
   color: inherit; }
 
 .input-groups .input-group {
@@ -309,7 +308,8 @@ input, textarea {
   padding: 0 32px 0 12px;
   background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8' standalone='no'%3F%3E%3Csvg width='10px' height='6px' viewBox='0 0 10 6' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Cdefs%3E%3C/defs%3E%3Cg id='Page-1' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd'%3E%3Cpolyline id='Path-2' stroke='%23FF3A00' stroke-width='1.5' points='9 1 5 5 1 1'%3E%3C/polyline%3E%3C/g%3E%3C/svg%3E");
   background-repeat: no-repeat;
-  background-position: center right 12px; }
+  background-position: center right 12px;
+  cursor: pointer; }
   .select-trigger:focus {
     outline: 0;
     border-color: #FF3A00; }
@@ -321,7 +321,7 @@ input, textarea {
 body {
   font-size: 14px;
   line-height: 24px;
-  font-family: karla;
+  font-family: 'Karla', sans-serif;
   color: #FF3A00; }
 
 .size-1 {
